Closed Bug 1196591 Opened 9 years ago Closed 9 years ago

Member in MediaBufferResource potentially not initialized before use

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox42 --- fixed
firefox43 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(1 file)

In bug 1190238, the initialization of member BufferMediaResource::mOffset was removed. This is incorrect. A fly-by rebase made me notice the problem
Note that it doesn't matter as a call to BufferMediaResource::ReadAt is always done first which will set the mOffset value.
Assignee: nobody → jyavenard
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Approval Request Comment [Feature/regressing bug #]:1190238 [User impact if declined]: don't believe there's any [Describe test coverage new/current, TreeHerder]: in central [Risks and why]: non-existent [String/UUID change made/needed]:none The incorrect change happened while performing a rebase. I've fixed it immediately when i notice it (during the beta rebase) but it slipped through aurora. This just remove the incorrect removal of the member initialization. it goes back to what was there before bug 1190238
Attachment #8650761 - Flags: approval-mozilla-aurora?
Attachment #8650761 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: