Bug 1196591: Initialize member. r=me a=sylvestre

Small correction introduced in bug 1190238